Project2/GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.7.2

    import Core.*;
    import CtrlNodes.*;
    import ValueNodes.*;
    import java.util.LinkedList;
    import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, BLOCK=36, INLINE=37, STRING=38, 
		ID=39, NUM=40, WS=41, NL=42;
	public static final int
		RULE_allExpr = 0, RULE_topExpr = 1, RULE_expr = 2, RULE_printExpr = 3, 
		RULE_printList = 4, RULE_ctrl = 5, RULE_exprList = 6, RULE_bracketedExprs = 7, 
		RULE_whileLoop = 8, RULE_bothExpr = 9, RULE_ifStatement = 10, RULE_forLoop = 11, 
		RULE_defineFxn = 12, RULE_fxnArgList = 13, RULE_num = 14, RULE_fxn = 15, 
		RULE_numArgList = 16, RULE_parens = 17, RULE_uniArith = 18, RULE_assign = 19, 
		RULE_uniLogic = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"allExpr", "topExpr", "expr", "printExpr", "printList", "ctrl", "exprList", 
			"bracketedExprs", "whileLoop", "bothExpr", "ifStatement", "forLoop", 
			"defineFxn", "fxnArgList", "num", "fxn", "numArgList", "parens", "uniArith", 
			"assign", "uniLogic"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'print'", "','", "'return'", "'{'", "'}'", "'while'", "'('", 
			"')'", "'if'", "'else'", "'for'", "'define'", "'^'", "'*'", "'/'", "'%'", 
			"'+'", "'-'", "'<='", "'<'", "'>='", "'>'", "'=='", "'!='", "'&&'", "'||'", 
			"'++'", "'--'", "'='", "'+='", "'-='", "'*='", "'/='", "'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"BLOCK", "INLINE", "STRING", "ID", "NUM", "WS", "NL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    RootASTNode root = new RootASTNode();

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class AllExprContext extends ParserRuleContext {
		public RootASTNode i;
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<TopExprContext> topExpr() {
			return getRuleContexts(TopExprContext.class);
		}
		public TopExprContext topExpr(int i) {
			return getRuleContext(TopExprContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(GrammarParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GrammarParser.NL, i);
		}
		public AllExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterAllExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitAllExpr(this);
		}
	}

	public final AllExprContext allExpr() throws RecognitionException {
		AllExprContext _localctx = new AllExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_allExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==NL) {
				{
				{
				setState(42);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==NL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__18) | (1L << T__27) | (1L << T__28) | (1L << T__34) | (1L << ID) | (1L << NUM))) != 0)) {
				{
				{
				setState(48);
				topExpr();
				setState(50); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(49);
					_la = _input.LA(1);
					if ( !(_la==T__0 || _la==NL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(52); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__0 || _la==NL );
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			{
			setState(59);
			match(EOF);
			}

			    ((AllExprContext)_localctx).i =  root;

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopExprContext extends ParserRuleContext {
		public ExprContext e;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TopExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTopExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTopExpr(this);
		}
	}

	public final TopExprContext topExpr() throws RecognitionException {
		TopExprContext _localctx = new TopExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((TopExprContext)_localctx).e = expr();

			        root.children.add(((TopExprContext)_localctx).e.i);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprNode i;
		public CtrlContext c;
		public NumContext n;
		public CtrlContext ctrl() {
			return getRuleContext(CtrlContext.class,0);
		}
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__3:
			case T__6:
			case T__9:
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				((ExprContext)_localctx).c = ctrl();

				        ((ExprContext)_localctx).i =  ((ExprContext)_localctx).c.i;
				    
				}
				break;
			case T__7:
			case T__18:
			case T__27:
			case T__28:
			case T__34:
			case ID:
			case NUM:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				((ExprContext)_localctx).n = num(0);

				        ((ExprContext)_localctx).i =  ((ExprContext)_localctx).n.i;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintExprContext extends ParserRuleContext {
		public PrintNode i;
		public PrintListContext pL;
		public PrintListContext printList() {
			return getRuleContext(PrintListContext.class,0);
		}
		public PrintExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterPrintExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitPrintExpr(this);
		}
	}

	public final PrintExprContext printExpr() throws RecognitionException {
		PrintExprContext _localctx = new PrintExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_printExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__1);
			setState(74);
			((PrintExprContext)_localctx).pL = printList();

			        ArrayList<ValueNode> lis = new ArrayList(((PrintExprContext)_localctx).pL.i);
			        ((PrintExprContext)_localctx).i =  new PrintNode(lis);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintListContext extends ParserRuleContext {
		public LinkedList<ValueNode> i;
		public NumContext n;
		public PrintListContext pL;
		public Token str;
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public PrintListContext printList() {
			return getRuleContext(PrintListContext.class,0);
		}
		public TerminalNode STRING() { return getToken(GrammarParser.STRING, 0); }
		public PrintListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterPrintList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitPrintList(this);
		}
	}

	public final PrintListContext printList() throws RecognitionException {
		PrintListContext _localctx = new PrintListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_printList);
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				((PrintListContext)_localctx).n = num(0);
				setState(78);
				match(T__2);
				setState(79);
				((PrintListContext)_localctx).pL = printList();

				        LinkedList<ValueNode> partSolvedList = ((PrintListContext)_localctx).pL.i;
				        partSolvedList.push(((PrintListContext)_localctx).n.i);
				        ((PrintListContext)_localctx).i =  partSolvedList;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				((PrintListContext)_localctx).str = match(STRING);
				setState(83);
				match(T__2);
				setState(84);
				((PrintListContext)_localctx).pL = printList();

				        LinkedList<ValueNode> partSolvedList = ((PrintListContext)_localctx).pL.i;
				        String temp = (((PrintListContext)_localctx).str!=null?((PrintListContext)_localctx).str.getText():null).substring(1,(((PrintListContext)_localctx).str!=null?((PrintListContext)_localctx).str.getText():null).length()-1);
				        // temp = temp.replace("\\n","\n").replace("\\t","\t").replace("\\r","\r");
				        partSolvedList.push(new StringNode(temp));
				        ((PrintListContext)_localctx).i =  partSolvedList;
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				((PrintListContext)_localctx).n = num(0);

				        LinkedList<ValueNode> retList = new LinkedList<ValueNode>();
				        retList.push(((PrintListContext)_localctx).n.i);
				        ((PrintListContext)_localctx).i =  retList;
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				((PrintListContext)_localctx).str = match(STRING);

				        LinkedList<ValueNode> retList = new LinkedList<ValueNode>();
				        String temp = (((PrintListContext)_localctx).str!=null?((PrintListContext)_localctx).str.getText():null).substring(1,(((PrintListContext)_localctx).str!=null?((PrintListContext)_localctx).str.getText():null).length()-1);
				        // temp = temp.replace("\\n","\n").replace("\\t","\t").replace("\\r","\r");
				        retList.push(new StringNode(temp));
				        ((PrintListContext)_localctx).i =  retList;
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CtrlContext extends ParserRuleContext {
		public CtrlNode i;
		public IfStatementContext ifs;
		public WhileLoopContext w;
		public ForLoopContext f;
		public DefineFxnContext d;
		public PrintExprContext p;
		public NumContext n;
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public DefineFxnContext defineFxn() {
			return getRuleContext(DefineFxnContext.class,0);
		}
		public PrintExprContext printExpr() {
			return getRuleContext(PrintExprContext.class,0);
		}
		public NumContext num() {
			return getRuleContext(NumContext.class,0);
		}
		public CtrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ctrl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterCtrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitCtrl(this);
		}
	}

	public final CtrlContext ctrl() throws RecognitionException {
		CtrlContext _localctx = new CtrlContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ctrl);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				((CtrlContext)_localctx).ifs = ifStatement();

				        ((CtrlContext)_localctx).i =  ((CtrlContext)_localctx).ifs.i;
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				((CtrlContext)_localctx).w = whileLoop();

				        ((CtrlContext)_localctx).i =  ((CtrlContext)_localctx).w.i;
				    
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				((CtrlContext)_localctx).f = forLoop();

				        ((CtrlContext)_localctx).i =  ((CtrlContext)_localctx).f.i;
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(103);
				((CtrlContext)_localctx).d = defineFxn();

				        ((CtrlContext)_localctx).i =  ((CtrlContext)_localctx).d.i;
				    
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				((CtrlContext)_localctx).p = printExpr();

				        ((CtrlContext)_localctx).i =  ((CtrlContext)_localctx).p.i;
				    
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(109);
				match(T__3);
				setState(110);
				((CtrlContext)_localctx).n = num(0);

				        ((CtrlContext)_localctx).i =  new ReturnNode(((CtrlContext)_localctx).n.i);
				    
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(113);
				match(T__3);

				        ((CtrlContext)_localctx).i =  new ReturnNode(new ConstNode(0.0));
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprListContext extends ParserRuleContext {
		public LinkedList<ExprNode> i;
		public ExprContext e;
		public ExprListContext eL;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public List<TerminalNode> NL() { return getTokens(GrammarParser.NL); }
		public TerminalNode NL(int i) {
			return getToken(GrammarParser.NL, i);
		}
		public ExprListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterExprList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitExprList(this);
		}
	}

	public final ExprListContext exprList() throws RecognitionException {
		ExprListContext _localctx = new ExprListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exprList);
		int _la;
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				((ExprListContext)_localctx).e = expr();
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(118);
					_la = _input.LA(1);
					if ( !(_la==T__0 || _la==NL) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(121); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__0 || _la==NL );
				setState(123);
				((ExprListContext)_localctx).eL = exprList();
